updates to manuscript

--- a/library.bib
+++ b/library.bib
@@ -65,3 +65,770 @@
   pages={1--36},
   year={2012}
 }
+
+@article{andersen2003trajectories,
+  title={Trajectories of brain development: point of vulnerability or window of opportunity?},
+  author={Andersen, Susan L},
+  journal={Neuroscience \& Biobehavioral Reviews},
+  volume={27},
+  number={1-2},
+  pages={3--18},
+  year={2003},
+  publisher={Elsevier}
+}
+
+@article{baum2020development,
+  title={Development of structure--function coupling in human brain networks during youth},
+  author={Baum, Graham L and Cui, Zaixu and Roalf, David R and Ciric, Rastko and Betzel, Richard F and Larsen, Bart and Cieslak, Matthew and Cook, Philip A and Xia, Cedric H and Moore, Tyler M and others},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={117},
+  number={1},
+  pages={771--778},
+  year={2020},
+  publisher={National Academy of Sciences}
+}
+
+@article{best2010developmental,
+  title={A developmental perspective on executive function},
+  author={Best, John R and Miller, Patricia H},
+  journal={Child development},
+  volume={81},
+  number={6},
+  pages={1641--1660},
+  year={2010},
+  publisher={Wiley Online Library}
+}
+
+@article{diamond2013executive,
+  title={Executive functions},
+  author={Diamond, Adele},
+  journal={Annual review of psychology},
+  volume={64},
+  number={1},
+  pages={135--168},
+  year={2013},
+  publisher={Annual Reviews}
+}
+
+@article{dosenbach2006core,
+  title={A core system for the implementation of task sets},
+  author={Dosenbach, Nico UF and Visscher, Kristina M and Palmer, Erica D and Miezin, Francis M and Wenger, Kristin K and Kang, Hyunseon C and Burgund, E Darcy and Grimes, Ansley L and Schlaggar, Bradley L and Petersen, Steven E},
+  journal={Neuron},
+  volume={50},
+  number={5},
+  pages={799--812},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@article{fiske2019neural,
+  title={Neural substrates of early executive function development},
+  author={Fiske, Abigail and Holmboe, Karla},
+  journal={Developmental Review},
+  volume={52},
+  pages={42--62},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@article{garon2008executive,
+  title={Executive function in preschoolers: a review using an integrative framework.},
+  author={Garon, Nancy and Bryson, Susan E and Smith, Isabel M},
+  journal={Psychological bulletin},
+  volume={134},
+  number={1},
+  pages={31},
+  year={2008},
+  publisher={American Psychological Association}
+}
+
+@article{menon2022role,
+  title={The role of PFC networks in cognitive control and executive function},
+  author={Menon, Vinod and D’Esposito, Mark},
+  journal={Neuropsychopharmacology},
+  volume={47},
+  number={1},
+  pages={90--103},
+  year={2022},
+  publisher={Springer International Publishing Cham}
+}
+
+@article{moriguchi2013prefrontal,
+  title={Prefrontal cortex and executive function in young children: a review of NIRS studies},
+  author={Moriguchi, Yusuke and Hiraki, Kazuo},
+  journal={Frontiers in human neuroscience},
+  volume={7},
+  pages={867},
+  year={2013},
+  publisher={Frontiers Media SA}
+}
+
+@article{morton2009age,
+  title={Age-related changes in brain activation associated with dimensional shifts of attention: an fMRI study},
+  author={Morton, J Bruce and Bosma, Rachael and Ansari, Daniel},
+  journal={Neuroimage},
+  volume={46},
+  number={1},
+  pages={249--256},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@article{niendam2012meta,
+  title={Meta-analytic evidence for a superordinate cognitive control network subserving diverse executive functions},
+  author={Niendam, Tara A and Laird, Angela R and Ray, Kimberly L and Dean, Y Monica and Glahn, David C and Carter, Cameron S},
+  journal={Cognitive, Affective, \& Behavioral Neuroscience},
+  volume={12},
+  number={2},
+  pages={241--268},
+  year={2012},
+  publisher={Springer}
+}
+
+@article{tamnes2017development,
+  title={Development of the cerebral cortex across adolescence: a multisample study of inter-related longitudinal changes in cortical volume, surface area, and thickness},
+  author={Tamnes, Christian K and Herting, Megan M and Goddings, Anne-Lise and Meuwese, Rosa and Blakemore, Sarah-Jayne and Dahl, Ronald E and G{\"u}ro{\u{g}}lu, Berna and Raznahan, Armin and Sowell, Elizabeth R and Crone, Eveline A and others},
+  journal={Journal of Neuroscience},
+  volume={37},
+  number={12},
+  pages={3402--3412},
+  year={2017},
+  publisher={Society for Neuroscience}
+}
+
+@article{menon2013developmental,
+  title={Developmental pathways to functional brain networks: emerging principles},
+  author={Menon, Vinod},
+  journal={Trends in cognitive sciences},
+  volume={17},
+  number={12},
+  pages={627--640},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{reilly2022developmental,
+  title={Developmental trajectories of executive functions from preschool to kindergarten},
+  author={Reilly, Shannon E and Downer, Jason T and Grimm, Kevin J},
+  journal={Developmental Science},
+  volume={25},
+  number={5},
+  pages={e13236},
+  year={2022},
+  publisher={Wiley Online Library}
+}
+
+@article{zelazo2003development,
+  title={The development of executive function in early childhood},
+  author={Zelazo, Philip David and M{\"u}ller, Ulrich and Frye, Douglas and Marcovitch, Stuart and Argitis, Gina and Boseovski, Janet and Chiang, Jackie K and Hongwanishkul, Donaya and Schuster, Barbara V and Sutherland, Alexandra and others},
+  journal={Monographs of the society for research in child development},
+  pages={i--151},
+  year={2003},
+  publisher={JSTOR}
+}
+
+@article{miyake2000unity,
+  title={The unity and diversity of executive functions and their contributions to complex “frontal lobe” tasks: A latent variable analysis},
+  author={Miyake, Akira and Friedman, Naomi P and Emerson, Michael J and Witzki, Alexander H and Howerter, Amy and Wager, Tor D},
+  journal={Cognitive psychology},
+  volume={41},
+  number={1},
+  pages={49--100},
+  year={2000},
+  publisher={Elsevier}
+}
+
+@article{friedman2017unity,
+  title={Unity and diversity of executive functions: Individual differences as a window on cognitive structure},
+  author={Friedman, Naomi P and Miyake, Akira},
+  journal={Cortex},
+  volume={86},
+  pages={186--204},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{brydges2012unitary,
+  title={A unitary executive function predicts intelligence in children},
+  author={Brydges, Christopher R and Reid, Corinne L and Fox, Allison M and Anderson, Mike},
+  journal={Intelligence},
+  volume={40},
+  number={5},
+  pages={458--469},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{karr2018unity,
+  title={The unity and diversity of executive functions: A systematic review and re-analysis of latent variable studies.},
+  author={Karr, Justin E and Areshenkoff, Corson N and Rast, Philippe and Hofer, Scott M and Iverson, Grant L and Garcia-Barrera, Mauricio A},
+  journal={Psychological bulletin},
+  volume={144},
+  number={11},
+  pages={1147},
+  year={2018},
+  publisher={American Psychological Association}
+}
+
+@article{wiebe2008using,
+  title={Using confirmatory factor analysis to understand executive control in preschool children: I. Latent structure.},
+  author={Wiebe, Sandra A and Espy, Kimberly Andrews and Charak, David},
+  journal={Developmental psychology},
+  volume={44},
+  number={2},
+  pages={575},
+  year={2008},
+  publisher={American Psychological Association}
+}
+
+@article{miller2012latent,
+  title={A latent variable approach to determining the structure of executive function in preschool children},
+  author={Miller, Michael R and Giesbrecht, Gerald F and M{\"u}ller, Ulrich and McInerney, Robert J and Kerns, Kimberly A},
+  journal={Journal of cognition and development},
+  volume={13},
+  number={3},
+  pages={395--423},
+  year={2012},
+  publisher={Taylor \& Francis}
+}
+
+@article{menu2024latent,
+  title={Latent network analysis of executive functions across development},
+  author={Menu, Iris and Borst, Grégoire and Cachia, Arnaud},
+  journal={Journal of cognition},
+  volume={7},
+  number={1},
+  pages={31},
+  year={2024}
+}
+
+@article{vandierendonck2021utility,
+  title={On the utility of integrated speed-accuracy measures when speed-accuracy trade-off is present},
+  author={Vandierendonck, Andr{\'e}},
+  journal={Journal of cognition},
+  volume={4},
+  number={1},
+  pages={22},
+  year={2021}
+}
+
+@article{schoemaker2013executive,
+  title={Executive functions in preschool children with externalizing behavior problems: A meta-analysis},
+  author={Schoemaker, Kim and Mulder, Hanna and Dekovi{\'c}, Maja and Matthys, Walter},
+  journal={Journal of abnormal child psychology},
+  volume={41},
+  number={3},
+  pages={457--471},
+  year={2013},
+  publisher={Springer}
+}
+
+@article{friedman2008individual,
+  title={Individual differences in executive functions are almost entirely genetic in origin.},
+  author={Friedman, Naomi P and Miyake, Akira and Young, Susan E and DeFries, John C and Corley, Robin P and Hewitt, John K},
+  journal={Journal of experimental psychology: General},
+  volume={137},
+  number={2},
+  pages={201},
+  year={2008},
+  publisher={American Psychological Association}
+}
+
+@article{lee2013developmental,
+  title={Developmental changes in executive functioning},
+  author={Lee, Kerry and Bull, Rebecca and Ho, Ringo MH},
+  journal={Child development},
+  volume={84},
+  number={6},
+  pages={1933--1953},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+
+@article{blair2016executive,
+  title={Executive function and early childhood education},
+  author={Blair, Clancy},
+  journal={Current opinion in behavioral sciences},
+  volume={10},
+  pages={102--107},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{reilly2022developmental,
+  title={Developmental trajectories of executive functions from preschool to kindergarten},
+  author={Reilly, Shannon E and Downer, Jason T and Grimm, Kevin J},
+  journal={Developmental Science},
+  volume={25},
+  number={5},
+  pages={e13236},
+  year={2022},
+  publisher={Wiley Online Library}
+}
+
+@article{nelson2016structure,
+  title={Structure, measurement, and development of preschool executive function.},
+  author={Nelson, Jennifer Mize and James, Tiffany D and Chevalier, Nicolas and Clark, Caron AC and Espy, Kimberly Andrews},
+  year={2016},
+  publisher={American Psychological Association}
+}
+
+@article{willoughby2012measurement,
+  title={The measurement of executive function at age 5: psychometric properties and relationship to academic achievement.},
+  author={Willoughby, Michael T and Blair, Clancy B and Wirth, RJ and Greenberg, Mark},
+  journal={Psychological assessment},
+  volume={24},
+  number={1},
+  pages={226},
+  year={2012},
+  publisher={American Psychological Association}
+}
+
+@article{zelazo2016executive,
+  title={Executive Function: Implications for Education. NCER 2017-2000.},
+  author={Zelazo, Philip David and Blair, Clancy B and Willoughby, Michael T},
+  journal={National Center for Education Research},
+  year={2016},
+  publisher={ERIC}
+}
+
+@article{zelazo2006dimensional,
+  title={The Dimensional Change Card Sort (DCCS): A method of assessing executive function in children},
+  author={Zelazo, Philip David},
+  journal={Nature protocols},
+  volume={1},
+  number={1},
+  pages={297--301},
+  year={2006},
+  publisher={Nature publishing group}
+}
+
+@article{lehto2003dimensions,
+  title={Dimensions of executive functioning: Evidence from children},
+  author={Lehto, Juhani E and Juuj{\"a}rvi, Petri and Kooistra, Libbe and Pulkkinen, Lea},
+  journal={British journal of developmental psychology},
+  volume={21},
+  number={1},
+  pages={59--80},
+  year={2003},
+  publisher={Wiley Online Library}
+}
+
+@article{jones2016executive,
+  title={Executive function mapping project: Untangling the terms and skills related to executive function and self-regulation in early childhood},
+  author={Jones, Stephanie M and Bailey, R and Barnes, SP and Partee, A},
+  journal={Research and Evaluation, Administration for Children and Families, US Department of Health and Human Services},
+  pages={2016--88},
+  year={2016}
+}
+
+@article{steinbeis2018neurocognitive,
+  title={Neurocognitive mechanisms of prosociality in childhood},
+  author={Steinbeis, Nikolaus},
+  journal={Current Opinion in Psychology},
+  volume={20},
+  pages={30--34},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@article{usai2014latent,
+  title={Latent structure of executive function in five-and six-year-old children: A longitudinal study},
+  author={Usai, M Carmen and Viterbori, Paola and Traverso, Laura and De Franchis, Valentina},
+  journal={European Journal of Developmental Psychology},
+  volume={11},
+  number={4},
+  pages={447--462},
+  year={2014},
+  publisher={Taylor \& Francis}
+}
+
+@article{devine2016executive,
+  title={Executive function mediates the relations between parental behaviors and children's early academic ability},
+  author={Devine, Rory T and Bignardi, Giacomo and Hughes, Claire},
+  journal={Frontiers in Psychology},
+  volume={7},
+  pages={1902},
+  year={2016},
+  publisher={Frontiers Media SA}
+}
+
+@article{li2025structural,
+  title={Structural brain basis of latent factors of executive functions in childhood},
+  author={Li, Yongjing and Ganesan, Keertana and Smid, Claire R and Thompson, Abigail and Canigueral, Roser and Royer, Jessica and Bernhardt, Boris and Steinbeis, Nikolaus},
+  journal={Developmental Cognitive Neuroscience},
+  volume={71},
+  pages={101504},
+  year={2025},
+  publisher={Elsevier}
+}
+
+@article{dosenbach2007distinct,
+  title={Distinct brain networks for adaptive and stable task control in humans},
+  author={Dosenbach, Nico UF and Fair, Damien A and Miezin, Francis M and Cohen, Alexander L and Wenger, Kristin K and Dosenbach, Ronny AT and Fox, Michael D and Snyder, Abraham Z and Vincent, Justin L and Raichle, Marcus E and others},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={104},
+  number={26},
+  pages={11073--11078},
+  year={2007},
+  publisher={National Academy of Sciences}
+}
+
+@article{dosenbach2008dual,
+  title={A dual-networks architecture of top-down control},
+  author={Dosenbach, Nico UF and Fair, Damien A and Cohen, Alexander L and Schlaggar, Bradley L and Petersen, Steven E},
+  journal={Trends in cognitive sciences},
+  volume={12},
+  number={3},
+  pages={99--105},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@article{niendam2012meta,
+  title={Meta-analytic evidence for a superordinate cognitive control network subserving diverse executive functions},
+  author={Niendam, Tara A and Laird, Angela R and Ray, Kimberly L and Dean, Y Monica and Glahn, David C and Carter, Cameron S},
+  journal={Cognitive, Affective, \& Behavioral Neuroscience},
+  volume={12},
+  number={2},
+  pages={241--268},
+  year={2012},
+  publisher={Springer}
+}
+
+@article{power2011functional,
+  title={Functional network organization of the human brain},
+  author={Power, Jonathan D and Cohen, Alexander L and Nelson, Steven M and Wig, Gagan S and Barnes, Kelly Anne and Church, Jessica A and Vogel, Alecia C and Laumann, Timothy O and Miezin, Fran M and Schlaggar, Bradley L and others},
+  journal={Neuron},
+  volume={72},
+  number={4},
+  pages={665--678},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{rodriguez2022inhibition,
+  title={Inhibition, Shifting and Updating: Inter and intra-domain commonalities and differences from an executive functions activation likelihood estimation meta-analysis},
+  author={Rodr{\'\i}guez-Nieto, Geraldine and Seer, Caroline and Sidlauskaite, Justina and Vleugels, Lore and Van Roy, Anke and Hardwick, Robert and Swinnen, Stephan},
+  journal={NeuroImage},
+  volume={264},
+  pages={119665},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@article{zhang2017large,
+  title={Large-scale functional neural network correlates of response inhibition: an fMRI meta-analysis},
+  author={Zhang, Ruibin and Geng, Xiujuan and Lee, Tatia MC},
+  journal={Brain Structure and Function},
+  volume={222},
+  number={9},
+  pages={3973--3990},
+  year={2017},
+  publisher={Springer}
+}
+
+@article{rottschy2012modelling,
+  title={Modelling neural correlates of working memory: a coordinate-based meta-analysis},
+  author={Rottschy, Claudia and Langner, Robert and Dogan, Imis and Reetz, Kathrin and Laird, Angela R and Schulz, J{\"o}rg B and Fox, Peter T and Eickhoff, Simon B},
+  journal={Neuroimage},
+  volume={60},
+  number={1},
+  pages={830--846},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{engelhardt2019neural,
+  title={The neural architecture of executive functions is established by middle childhood},
+  author={Engelhardt, Laura E and Harden, K Paige and Tucker-Drob, Elliot M and Church, Jessica A},
+  journal={NeuroImage},
+  volume={185},
+  pages={479--489},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@article{kelsey2025forming,
+  title={Forming connections: functional Brain connectivity is associated with executive functioning abilities in early childhood},
+  author={Kelsey, Caroline and Kamenetskiy, Adelia and Mulligan, Kaitlin and Tiras, Carly and Kent, Michaela and Bayet, Laurie and Richards, John and Bosquet Enlow, Michelle and Nelson, Charles A},
+  journal={Developmental science},
+  volume={28},
+  number={2},
+  pages={e13604},
+  year={2025},
+  publisher={Wiley Online Library}
+}
+
+@article{buss2018changes,
+  title={Changes in frontal and posterior cortical activity underlie the early emergence of executive function},
+  author={Buss, Aaron T and Spencer, John P},
+  journal={Developmental Science},
+  volume={21},
+  number={4},
+  pages={e12602},
+  year={2018},
+  publisher={Wiley Online Library}
+}
+
+@article{cui2020optimization,
+  title={Optimization of energy state transition trajectory supports the development of executive function during youth},
+  author={Cui, Zaixu and Stiso, Jennifer and Baum, Graham L and Kim, Jason Z and Roalf, David R and Betzel, Richard F and Gu, Shi and Lu, Zhixin and Xia, Cedric H and He, Xiaosong and others},
+  journal={elife},
+  volume={9},
+  pages={e53060},
+  year={2020},
+  publisher={eLife Sciences Publications, Ltd}
+}
+
+@article{dixon2018heterogeneity,
+  title={Heterogeneity within the frontoparietal control network and its relationship to the default and dorsal attention networks},
+  author={Dixon, Matthew L and De La Vega, Alejandro and Mills, Caitlin and Andrews-Hanna, Jessica and Spreng, R Nathan and Cole, Michael W and Christoff, Kalina},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={115},
+  number={7},
+  pages={E1598--E1607},
+  year={2018},
+  publisher={National Academy of Sciences}
+}
+
+@article{yeo2011organization,
+  title={The organization of the human cerebral cortex estimated by intrinsic functional connectivity},
+  author={Yeo, BT Thomas and Krienen, Fenna M and Sepulcre, Jorge and Sabuncu, Mert R and Lashkari, Danial and Hollinshead, Marisa and Roffman, Joshua L and Smoller, Jordan W and Z{\"o}llei, Lilla and Polimeni, Jonathan R and others},
+  journal={Journal of neurophysiology},
+  year={2011},
+  publisher={American Physiological Society Bethesda, MD}
+}
+
+@article{rodriguez2022inhibition,
+  title={Inhibition, Shifting and Updating: Inter and intra-domain commonalities and differences from an executive functions activation likelihood estimation meta-analysis},
+  author={Rodr{\'\i}guez-Nieto, Geraldine and Seer, Caroline and Sidlauskaite, Justina and Vleugels, Lore and Van Roy, Anke and Hardwick, Robert and Swinnen, Stephan},
+  journal={NeuroImage},
+  volume={264},
+  pages={119665},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@article{hung2018dissociations,
+  title={Dissociations of cognitive inhibition, response inhibition, and emotional interference: Voxelwise ALE meta-analyses of fMRI studies},
+  author={Hung, Yuwen and Gaillard, Schuyler L and Yarmak, Pavel and Arsalidou, Marie},
+  journal={Human brain mapping},
+  volume={39},
+  number={10},
+  pages={4065--4082},
+  year={2018},
+  publisher={Wiley Online Library}
+}
+
+@article{kurth2010link,
+  title={A link between the systems: functional differentiation and integration within the human insula revealed by meta-analysis},
+  author={Kurth, Florian and Zilles, Karl and Fox, Peter T and Laird, Angela R and Eickhoff, Simon B},
+  journal={Brain structure and function},
+  volume={214},
+  number={5},
+  pages={519--534},
+  year={2010},
+  publisher={Springer}
+}
+
+@article{collette2006exploration,
+  title={Exploration of the neural substrates of executive functioning by functional neuroimaging},
+  author={Collette, Fabienne and Hogge, Micha{\"e}l and Salmon, Eric and Van der Linden, Martial},
+  journal={Neuroscience},
+  volume={139},
+  number={1},
+  pages={209--221},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@article{mckenna2017informing,
+  title={Informing the structure of executive function in children: a meta-analysis of functional neuroimaging data},
+  author={McKenna, R{\'o}is{\'\i}n and Rushe, Teresa and Woodcock, Kate A},
+  journal={Frontiers in human neuroscience},
+  volume={11},
+  pages={154},
+  year={2017},
+  publisher={Frontiers Media SA}
+}
+
+@article{ezekiel2013dimensional,
+  title={Dimensional change card sort performance associated with age-related differences in functional connectivity of lateral prefrontal cortex},
+  author={Ezekiel, Fredrick and Bosma, Rachael and Morton, J Bruce},
+  journal={Developmental cognitive neuroscience},
+  volume={5},
+  pages={40--50},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{o2008neurodevelopmental,
+  title={Neurodevelopmental changes in verbal working memory load-dependency: an fMRI investigation},
+  author={O'Hare, Elizabeth D and Lu, Lisa H and Houston, Suzanne M and Bookheimer, Susan Y and Sowell, Elizabeth R},
+  journal={Neuroimage},
+  volume={42},
+  number={4},
+  pages={1678--1685},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@article{rubia2013functional,
+  title={Functional brain imaging across development},
+  author={Rubia, Katya},
+  journal={European child \& adolescent psychiatry},
+  volume={22},
+  number={12},
+  pages={719--731},
+  year={2013},
+  publisher={Springer}
+}
+
+@article{crone2006neurocognitive,
+  title={Neurocognitive development of the ability to manipulate information in working memory},
+  author={Crone, Eveline A and Wendelken, Carter and Donohue, Sarah and van Leijenhorst, Linda and Bunge, Silvia A},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={103},
+  number={24},
+  pages={9315--9320},
+  year={2006},
+  publisher={National Academy of Sciences}
+}
+
+@article{cui2020optimization,
+  title={Optimization of energy state transition trajectory supports the development of executive function during youth},
+  author={Cui, Zaixu and Stiso, Jennifer and Baum, Graham L and Kim, Jason Z and Roalf, David R and Betzel, Richard F and Gu, Shi and Lu, Zhixin and Xia, Cedric H and He, Xiaosong and others},
+  journal={elife},
+  volume={9},
+  pages={e53060},
+  year={2020},
+  publisher={eLife Sciences Publications, Ltd}
+}
+
+@article{shanmugan2016neural,
+  title={Neural markers of the development of executive function: relevance for education},
+  author={Shanmugan, Sheila and Satterthwaite, Theodore D},
+  journal={Current opinion in behavioral sciences},
+  volume={10},
+  pages={7--13},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{li2025structural,
+  title={Structural brain basis of latent factors of executive functions in childhood},
+  author={Li, Yongjing and Ganesan, Keertana and Smid, Claire R and Thompson, Abigail and Canigueral, Roser and Royer, Jessica and Bernhardt, Boris and Steinbeis, Nikolaus},
+  journal={Developmental Cognitive Neuroscience},
+  volume={71},
+  pages={101504},
+  year={2025},
+  publisher={Elsevier}
+}
+
+@article{johnson2011interactive,
+  title={Interactive specialization: a domain-general framework for human functional brain development?},
+  author={Johnson, Mark H},
+  journal={Developmental cognitive neuroscience},
+  volume={1},
+  number={1},
+  pages={7--21},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{cook2024risk,
+  title={Risk and protective factors for executive function in vulnerable South African preschool-age children},
+  author={Cook, Caylee J and Howard, Steven J and Makaula, Hleliwe and Merkley, Rebecca and Mshudulu, Mbulelo and Tshetu, Nosibusiso and Scerif, Gaia and Draper, Catherine E},
+  journal={Journal of Cognition},
+  volume={7},
+  number={1},
+  pages={58},
+  year={2024}
+}
+
+@article{cook2019associations,
+  title={Associations of physical activity and gross motor skills with executive function in preschool children from low-income South African settings},
+  author={Cook, Caylee J and Howard, Steven J and Scerif, Gaia and Twine, Rhian and Kahn, Kathleen and Norris, Shane A and Draper, Catherine E},
+  journal={Developmental science},
+  volume={22},
+  number={5},
+  pages={e12820},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+
+@article{hossain2021international,
+  title={International study of 24-h movement behaviors of early years (SUNRISE): a pilot study from Bangladesh},
+  author={Hossain, Mohammad Sorowar and Deeba, Iztiba M and Hasan, Mahmudul and Kariippanon, Katharina E and Chong, Kar Hau and Cross, Penny L and Ferdous, Shameema and Okely, Anthony D},
+  journal={Pilot and Feasibility Studies},
+  volume={7},
+  number={1},
+  pages={176},
+  year={2021},
+  publisher={Springer}
+}
+
+@article{munambah202124,
+  title={24 hour movement behaviours and the health and development of pre-school children from Zimbabwean settings: the SUNRISE pilot study},
+  author={Munambah, Nyaradzai and Gretschel, Pam and Muchirahondo, F and Chiwaridzo, Matthew and Chikwanha, T and Kariippanon, Katharina E and Chong, Kar Hau and Cross, Penny L and Draper, Catherine E and Okely, Anthony D},
+  journal={South African Journal of Sports Medicine},
+  volume={33},
+  number={1},
+  pages={v33i1a10864},
+  year={2021}
+}
+
+@article{draper2020understanding,
+  title={Understanding the influence of 24-hour movement behaviours on the health and development of preschool children from low-income South African settings: the SUNRISE pilot study},
+  author={Draper, CE and Tomaz, Simone A and Cook, Caylee J and Jugdav, Sasha S and Ramsammy, Candice and van Heerden, A and Vilakazi, K and Cockcroft, K and Howard, SJ and Okely, AD and others},
+  journal={South African Journal of Sports Medicine},
+  volume={32},
+  number={1},
+  pages={1--7},
+  year={2020},
+  publisher={South African Sports Medicine Association}
+}
+
+@article{howard2017early,
+  title={An early years toolbox for assessing early executive function, language, self-regulation, and social development: Validity, reliability, and preliminary norms},
+  author={Howard, Steven J and Melhuish, Edward},
+  journal={Journal of psychoeducational assessment},
+  volume={35},
+  number={3},
+  pages={255--275},
+  year={2017},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{melhuish2008effects,
+  title={Effects of the home learning environment and preschool center experience upon literacy and numeracy development in early primary school},
+  author={Melhuish, Edward C and Phan, Mai B and Sylva, Kathy and Sammons, Pam and Siraj-Blatchford, Iram and Taggart, Brenda},
+  journal={Journal of social issues},
+  volume={64},
+  number={1},
+  pages={95--114},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+
+@book{sylva2004effective,
+  title={The effective provision of pre-school education (EPPE) project: Final Report: A longitudinal study funded by the DfES 1997-2004},
+  author={Sylva, Kathy and Melhuish, Edward and Sammons, Pam and Siraj-Blatchford, Iram and Taggart, Brenda},
+  year={2004},
+  publisher={Institute of Education, University of London/Department for Education and~…}
+}
+
+@article{dawes2020early,
+  title={The early learning programme outcomes study technical report},
+  author={Dawes, A and Biersteker, L and Girdwood, L and Snelling, M and Horler, J},
+  journal={Claremont Cape Town: Innovation Edge (www. innovationedge. org. za) and Ilifa Labantwana (www. ilifalabantwana. co. za)},
+  year={2020}
+}
+
+@article{melhuish2010impact,
+  title={Impact of the home learning environment on child cognitive development: secondary analysis of data from" Growing Up in Scotland"},
+  author={Melhuish, Edward C},
+  year={2010},
+  publisher={Scottish Government Social Research}
+}
