initial draft of paper

--- a/library.bib
+++ b/library.bib
@@ -832,3 +832,58 @@
   year={2010},
   publisher={Scottish Government Social Research}
 }
+
+@article{borsboom2021network,
+  title={Network analysis of multivariate data in psychological science},
+  author={Borsboom, Denny and Deserno, Marie K and Rhemtulla, Mijke and Epskamp, Sacha and Fried, Eiko I and McNally, Richard J and Robinaugh, Donald J and Perugini, Marco and Dalege, Jonas and Costantini, Giulio and others},
+  journal={Nature reviews methods primers},
+  volume={1},
+  number={1},
+  pages={58},
+  year={2021},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{cramer2010comorbidity,
+  title={Comorbidity: A network perspective},
+  author={Cramer, Ang{\'e}lique OJ and Waldorp, Lourens J and Van Der Maas, Han LJ and Borsboom, Denny},
+  journal={Behavioral and brain sciences},
+  volume={33},
+  number={2-3},
+  pages={137--150},
+  year={2010},
+  publisher={Cambridge University Press}
+}
+
+@article{blair2016poverty,
+  title={Poverty, stress, and brain development: New directions for prevention and intervention},
+  author={Blair, Clancy and Raver, C Cybele},
+  journal={Academic pediatrics},
+  volume={16},
+  number={3},
+  pages={S30--S36},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{sheridan2014dimensions,
+  title={Dimensions of early experience and neural development: deprivation and threat},
+  author={Sheridan, Margaret A and McLaughlin, Katie A},
+  journal={Trends in cognitive sciences},
+  volume={18},
+  number={11},
+  pages={580--585},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{howard2020challenging,
+  title={Challenging socioeconomic status: A cross-cultural comparison of early executive function},
+  author={Howard, Steven J and Cook, Caylee J and Everts, Lizl and Melhuish, Edward and Scerif, Gaia and Norris, Shane and Twine, Rhian and Kahn, Kathleen and Draper, Catherine E},
+  journal={Developmental science},
+  volume={23},
+  number={1},
+  pages={e12854},
+  year={2020},
+  publisher={Wiley Online Library}
+}
