--- a/EF_network_analysis.tex
+++ b/EF_network_analysis.tex
@@ -166,7 +166,9 @@ using Network Analysis}
 
 
 
-\authorsnames[{1,2},{2},{3},{4},{5},{3},{2},{2}]{A,B,C,D,E,F*,G*,H*}
+\authorsnames[{1,2},{2},{3},{4},{5},{3},{2},{2}]{Fionnuala
+O'Reilly,Jelena Sucevic,Caylee Cook,Justin E. Karr,Philippe
+Rast,Catherine Draper*,Steven Howard*,Gaia Scerif*}
 
 
 
@@ -182,7 +184,7 @@ Davis}}
 
 
 
-\leftheader{A, B, C, D, E, F*, G* and H*}
+\leftheader{O'Reilly, Sucevic, Cook, Karr, Rast, Draper*, Howard* and Scerif*}
 
 
 
@@ -190,12 +192,21 @@ Davis}}
 
 \keywords{executive function}
 
-\authornote{ 
+\authornote{\par{\addORCIDlink{Fionnuala
+O'Reilly}{0000-0002-4355-9088}}\par{\addORCIDlink{Jelena
+Sucevic}{0000-0001-5091-5434}}\par{\addORCIDlink{Caylee
+Cook}{0000-0001-9718-8887}}\par{\addORCIDlink{Justin E.
+Karr}{0000-0003-3653-332X}}\par{\addORCIDlink{Philippe
+Rast}{0000-0003-3630-6629}}\par{\addORCIDlink{Catherine
+Draper*}{0000-0002-2885-437X}}\par{\addORCIDlink{Steven
+Howard*}{0000-0002-1258-3210}}\par{\addORCIDlink{Gaia
+Scerif*}{0000-0002-6371-8874}} 
 
 \par{   The author has no conflict of interest to declare. This work was
 supported by X.   }
 \par{Correspondence concerning this article should be addressed
-to A, Email: \href{mailto:f@psy.ox.ac.uk}{f@psy.ox.ac.uk}}
+to Fionnuala
+O'Reilly, Email: \href{mailto:fionnuala.oreilly@psy.ox.ac.uk}{fionnuala.oreilly@psy.ox.ac.uk}}
 }
 
 \makeatletter
